# better-kill

./: Cargo.toml  README.md  flake.nix  rustfmt.toml
src/: filter.rs  lib.rs  list.rs  main.rs  print.rs  signal.rs  types.rs
