[package]
name = "better-kill"
version = "0.1.0"
authors = ["Khushraj Rathod <me@khushrajrathod.com>"]
edition = "2018"

[[bin]]
name = "bkill"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "2.33.3"
sysinfo = "0.18.2"
users = "0.11.0"
